// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<table
  class="table"
>
  <tbody>
    <tr>
      <td>
        Row
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TableCell renders center-aligned cell correctly 1`] = `
<table>
  <tbody>
    <tr>
      <td
        align="center"
        class="cell"
      >
        Row
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TableCell renders left-aligned cell correctly 1`] = `
<table>
  <tbody>
    <tr>
      <td
        align="left"
        class="cell"
      >
        Row
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TableCell renders right-aligned cell correctly 1`] = `
<table>
  <tbody>
    <tr>
      <td
        align="right"
        class="cell"
      >
        Row
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TableHeader renders center-aligned header correctly 1`] = `
<table>
  <tbody>
    <tr>
      <th
        align="center"
        class="cell header"
      >
        Row
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`TableHeader renders left-aligned header correctly 1`] = `
<table>
  <tbody>
    <tr>
      <th
        align="left"
        class="cell header"
      >
        Row
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`TableHeader renders right-aligned header correctly 1`] = `
<table>
  <tbody>
    <tr>
      <th
        align="right"
        class="cell header"
      >
        Row
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`TableRow renders correctly 1`] = `
<table>
  <tbody>
    <tr
      class="row"
    >
      <td>
        Row
      </td>
    </tr>
  </tbody>
</table>
`;
